<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="student_note_saving_note">Saving note…</string>
    <string name="student_note_note_deleted">Note deleted</string>
    <string name="student_note_form_title">Note</string>
    <string name="student_note_edit_note">Edit note</string>
    <string name="student_note_add_note">Add note</string>
    <string name="student_note_title">Title</string>
    <string name="student_note_description">Description</string>
    <string name="student_note_type">Type</string>
    <string name="student_note_neutral_type">Note</string>
    <string name="student_note_negative_type">Negative note</string>
</resources>